<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rehabilitation Helper_gp7</string>
    <string name="main_title">Rehabilitation Helper</string>
    <string name="main_subtitle">Design for hand injury and elderly </string>
    <string name="enter_button">Enter</string>
    <string name="login_page_title">User Login</string>
    <string name="login_username_placeholder">Username</string>
    <string name="login_password_placeholder">Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="select_level">Select Level</string>
    <string name="level_1_button">1</string>
    <string name="level_2_button">2</string>
    <string name="level_3_button">3</string>
    <string name="level_4_button">4</string>
    <string name="level_5_button">5</string>
    <string name="level_6_button">6</string>
    <string name="level_7_button">7</string>
    <string name="level_8_button">8</string>
    <string name="level_9_button">9</string>
    <string name="level_10_button">10</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>
    <string name="logout">Logout</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="finish_level">Finish Level</string>
    <string name="unfinish_level">Unfinish Level</string>
    <string name="scoreboard_title">Scoreboard</string>
    <string name="return_button">Back</string>
    <string name="click_me">Click Me!!!</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="restart_button">Restart</string>
    <string name="return_level_select_button">Return to Level Select</string>
    <string name="reset_button">Reset</string>
    <string name="level_6_title">Put the button into the moving square</string>
    <string name="click_text">Click</string>
    <string name="level_8_warning">Notice: Black ball may reset your score!</string>
    <string name="pause">Pause</string>
    <string name="level_10_final_challenge">Level 10 - Final Challenge</string>
    <string name="time_60s">Time: 60s</string>
    <string name="score_0">Score: 0</string>
    <string name="task_1_waiting_to_start">Task 1: Waiting to start</string>
    <string name="task_0_4">Task: 0/4</string>
    <string name="waiting_for_task" tools:ignore="TypographyEllipsis">Waiting for task...</string>
</resources>