<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/selectLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_level"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintTop_toBottomOf="@id/selectLevelTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnLevel1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_2"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_4"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_5"
            android:textSize="24sp" />

    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintTop_toBottomOf="@id/gridLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnLevel6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_6"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_7"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_8"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_9"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLevel10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:text="@string/level_10"
            android:textSize="24sp" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>