<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">
    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <RelativeLayout
        android:id="@+id/move_area"
        android:layout_width="261dp"
        android:layout_height="334dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelTitle"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnClickMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/click_me"
            app:cornerRadius="0dp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="118dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnUnfinishLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfinish_level"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
