<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Level 2"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnFinishLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/btnFinishLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_level"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/levelTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnUnfinishLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btnUnfinishLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfinish_level"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnFinishLevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <RelativeLayout
        android:id="@+id/area2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelTitle"
        app:layout_constraintVertical_bias="1.0">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="94dp"
            android:layout_marginTop="150dp" />

        <Button
            android:id="@+id/btnClickMe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="56dp"
            android:text="@string/click_me"
            app:cornerRadius="0dp" />
    </RelativeLayout>
    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
